# alg-parser

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
examples/: parser_demo.rs  regex_demo.rs
proc_macros/: Cargo.toml
src/: data.rs  dsl.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_demo.rs  regex.rs  regex_demo.rs  utils.rs
src/algs/: gram.rs  mod.rs  state.rs
src/proc_macros/: Cargo.toml
src/proc_macros/src/: lib.rs
