[package]
name = "alg-parser"
version = "0.1.0"
authors = ["minghu6 <a19678zy@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cute = "^0.3.0"
maplit = "^1.0.2"
paste = "^1.0"
unstringify = "0.1.1"
#key-set = { git = "https://github.com/minghu6/rust-key-set", branch = "master" }
key-set = { path = "../key-set" }
indexmap = "1.6.*"
itertools = "0.10.*"
num = "0.4"

[dependencies.proc_macros]
package = "alg-parser-proc-macros"
path = "src/proc_macros"
version = "0.1.0"  # Same as main

[workspace]
members = ["src/proc_macros"]

[features]
yes=[]
