[package]
name = "alg-parser"
version = "0.1.0"
authors = ["minghu6 <a19678zy@163.com>"]
edition = "2021"

[dependencies]
cute = "^0.3.0"
maplit = "^1.0.2"
paste = "^1.0"
unstringify = "0.1.1"
#m6-key-set = { git = "https://github.com/minghu6/rust-key-set", tags = "v0.2.1" }
#m6-key-set = { path = "../key-set" }
m6-key-set = "0.2.1"
indexmap = "1.6.*"
itertools = "0.10.*"
num = "0.4"
lazy_static = "1.4.0"

proc-macros = { path = "proc_macros" }


[workspace]
members = ["proc_macros"]

[[example]]
name = "parser_demo"
crate-type=["lib"]

[[example]]
name = "regex_demo"
crate-type=["lib"]

[features]
yes=[]
