[package]
name = "alg-parser"
version = "0.1.0"
authors = ["minghu6 <a19678zy@163.com>"]
edition = "2021"

[dependencies]
cute = "^0.3.0"
maplit = "^1.0.2"
unstringify = "0.1.1"
key-set = { version ="0.2.1", package = "m6-key-set" }
indexmap = "1.6.*"
itertools = "0.10.*"
num = "0.4"
lazy_static = "1.4.0"
concat-idents = "1.1.5"

proc-macros = { path = "proc_macros" }


[workspace]
members = ["proc_macros"]

[[example]]
name = "parser_demo"
crate-type=["lib"]

[[example]]
name = "regex_demo"
crate-type=["lib"]

[features]
yes=[]
